# AirwayProcessing

./: Readme.txt  generateScriptsForAirwayAtlas.m
atlas/: curveRegistration.m  displayMultiCurves.m  displaySGS03Comparison.m  displaySlice.m  displaySliceForLandmarks.m  drawLandmarksOnMultiCurvesAndSGS.m
atlas/FunctionalBoxplot/: fbplot.m  ffbplot.m  pointwiseMedian.m  pointwisePCA.m  test.m  vectorPCA.m  wfbplot.m~  wfbplotCopy.m  wfbplotExtended.m  wfbplotImages.m  wfbplot_percentile.m  wpbplot.m
atlas/Matlabfunctions/fdaM/@basis/: plot.m
centerline/: generateCenterlineOfAirway.m  generateCenterlineOfAirway.m~
code/centerline/: compPrincipalDirection.m  findEdgeOfIsosurface.m  generateCenterlineOfAirway.m  nrrdRead.m
code/crossSections/: CMakeLists.txt  computeAreaAndContourWithMeanNorm.cxx  computeAreaAndContourWithMeanNorm.xml  computeAreaAndContourWithMeanNormCLP.h
code/display/: drawContourOfAirway.m  drawLandmarksOnOneCurve.m  fit_ellipse.m  getEllipse2DTo3D.m
code/display/Matlabfunctions/fdaM/@basis/: basis.m  getbasismatrix.m  getbasistype.m
crossSections/: CMakeCache.txt  Makefile  cmake_install.cmake  computeAreaAndContourWithMeanNorm.cxx  computeAreaAndContourWithMeanNorm.xml  computeAreaAndContourWithMeanNormCLP.h  computeAreaAndContourWithMeanNorm_modified.cxx
data/: CRL02_CuttingPlanes.txt  CRL02_Points.txt
display/: drawContourOfAirway.m  drawContourOfAirway.m~  drawLandmarksOnOneCurve.m  drawLandmarksOnOneCurve.m~
display/Matlabfunctions/fdaM/: landmarkreg.asv  landmarkreg.m  mongrad.m  pca_fd.m  pca_fd.m~  plot_pca.m
measure/: airwayMeasurement.m  measureArea.m
